fixing layout issue, put some fixed heights.

--- a/trunk/resource/war/theme/base.css
+++ b/trunk/resource/war/theme/base.css
@@ -42,20 +42,22 @@
 }
 
 .fui-loader {
-
+    min-height: 100%;
+    height: 100%;
+    min-width: 100%;
+    width: 100%;
 }
 
 #fui-header {
-   width: 100%;
+    width: 100%;
     height: 102px;
     background: chocolate;
-    float: left;
 }
 
 /*** The Essential Code ***/
 #fui-container {
     padding-left: 200px;      /* LC fullwidth */
-    padding-right: 50px;     /* RC fullwidth + CC padding */
+    padding-right: 10px;     /* RC fullwidth + CC padding */
 }
 
 #fui-container .fui-column {
@@ -64,20 +66,21 @@
 }
 
 #fui-center {
-    padding: 10px 20px;       /* CC padding */
+    padding: 10px 0px;       /* CC padding */
     width: 100%;
 }
 
 #fui-left {
     width: 180px;             /* LC width */
-    padding: 0 10px;          /* LC padding */
+   /* padding: 0 10px;          /* LC padding */
+    padding-left: 40px;
     right: 240px;             /* LC fullwidth + CC padding */
     margin-left: -100%;
 }
 
 #fui-right {
     width: 130px;             /* RC width */
-    padding: 0 2px;          /* RC padding */
+    /* padding: 0 2px;          /* RC padding */
     margin-right: -100%;
 }
 
@@ -93,12 +96,13 @@
 /*** Equal-height Columns ***/
 
 #fui-container {
-    overflow: hidden;
+    /* overflow: hidden; */
 }
 
 #fui-container .fui-column {
-    padding-bottom: 1001em;     /* X + padding-bottom */
-    margin-bottom: -1000em;     /* X */
+   /* padding-bottom: 1001em;     /* X + padding-bottom */
+    /* margin-bottom: -1000em;     /* X */
+    min-height: 400px;
 }
 
 /*** Footer Fix ***/
