--- a/trunk/resource/war/theme/corporate/style/content.css
+++ b/trunk/resource/war/theme/corporate/style/content.css
@@ -23,7 +23,6 @@
 	background : none repeat scroll 0 0 transparent;
 	width : 290px;
 	height :290px;
-	top: 100px;
 }
 
 .frq_signin_contaier .ui-widget-overlay {
